# JobLens

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  backfill_scores.py  import_resume.py  pyproject.toml  requirements.txt  test_applications.py  test_apps.db  test_dashboard.db  test_dashboard.py  test_database.py  test_discovery.py  test_embedding_worker.py  test_gap.py  test_ingestion.py  test_notifier.db  test_notifier.py  test_redis_embedding_queue.py  test_scheduler.py  test_scoring.py  test_signup.py  test_sse.db  test_sse.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_ingestion_runs.py  0003_phase6_career_workspace.py  0004_users_resumes_matches.py
backend/app/: config.py  database.py  log_context.py  main.py  notifier.py
backend/app/graphs/: discovery_graph.py  gap_graph.py
backend/app/models/: orm.py  schemas.py
backend/app/nodes/: bridge_generator.py  compare_skills.py  embed.py  extract_jd.py  fetch.py  generate_rationale.py  generate_report.py  normalize.py  normalize_skills.py  score.py
backend/app/repositories/: application_repository.py  company_repository.py  gap_repository.py  ingestion_run_repository.py  interview_note_repository.py  job_match_repository.py  job_repository.py  resume_repository.py  uow.py  user_repository.py
backend/app/routes/: api.py  applications.py  auth.py  dashboard.py
backend/backups/: joblens_backup_20260720_230513.db
backend/data/: job_sources.json  postings.json  resume.json  tech_aliases.json
backend/scripts/: backup_db.py
(+58 files in other folders)
